--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,3 @@
 - period: 2023.09 -- Present
-  course: CSED211 (Intro. to Computer SW Systems)
   position: Teaching Assistant
-  institution: Dept. of Computer Science and Engineering, POSTECH
+  institution: CSED211 (Intro. to Computer SW Systems)
