--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://parkyg01.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "Yonggon Park" # the name of your site, e.g. ACME Corp.
-description: "Ph.D. Student "
+description: "Ph.D. Student @ POSTECH CSE"
