--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,3 +1,3 @@
 - period: 2023.09 -- Present
   position: Teaching Assistant
-  institution: CSED211 (Intro. to Computer SW Systems)
+  institution: CSED211 (Intro. to Computer SW Systems), POSTECH
