--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,7 +1,7 @@
 - id: yonggon.park
   name: Yonggon Park
   email: yg.park@postech.ac.kr
-  role: Ph.D. Student (Integrated Course)
+  role: Ph.D. Student
   image: assets/images/people/ygpark.jpg
   id: Room 4304, RIST 4,, POSTECH
   educations: [
