--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,4 +13,4 @@ social:
 institution_address: '77, Cheongam-ro, Nam-gu, Pohang-si, Gyeongsangbuk-do, Republic of Korea 37673'
 phone: '+82-10-4857-0727'
 email: 'yg.park@postech.ac.kr'
-laboratory: 'Room 4304, RIST 4'
+office: 'Room 4304, RIST 4'
