--- a/_data/basic.yml
+++ b/_data/basic.yml
@@ -2,4 +2,4 @@
 institution_address: '77, Cheongam-ro, Nam-gu, Pohang-si, Gyeongsangbuk-do, Republic of Korea 37673'
 phone: '+82-10-4857-0727'
 email: 'yg.park@postech.ac.kr'
-laboratory: 'Room 4304, RIST 4'
+: 'Room 4304, RIST 4'
