--- a/_data/people.yml
+++ b/_data/people.yml
@@ -3,7 +3,7 @@
   email: yg.park@postech.ac.kr
   role: Ph.D. Student
   image: assets/images/people/ygpark.jpg
-  id: Room 4304, RIST 4,, POSTECH
+  id: Room 4304, RIST 4, POSTECH
   educations: [
     "[2020] B.S. in Computer Science. POSTECH."
   ]
